<resources>
    <string name="app_name">准儿</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="Choice_of_language">选择语言</string>
    <string name="china">汉语</string>
    <string name="english">英语(美国)</string>
    <string name="hint_down">请说标准普通话。</string>
    <string name="hint_up">Please speak in standard language.</string>
    <string name="wuwangluo">当前无网络</string>
    <string name="shebeihao">获取设备号失败，请联系商家！</string>
    <string name="shifan">正在释放离线模型</string>
    <string name="chuangjian">等待创建离线模型</string>
    <string name="buzhichi">当前语言不支持离线翻译</string>
    <string name="tongyuyanbuzhichi">同语言不支持离线翻译</string>
    <string name="offline">离线</string>
    <string name="notUnderstand">准儿没有听懂</string>
    <string name="notUnderstand_en">I didn\'t catch that</string>
    <string name="tran_failed">准儿翻译失败</string>
    <string name="conn_net">连接网络</string>
    <string name="cont_use">继续使用</string>
    <string name="dialog_content">当前为离线翻译模式，该模式仅作为辅助使用。连网翻译更准确</string>
    <!--引导-->
    <string name="idown">我知道了</string>
    <string name="onclick_op">切换对侧语言</string>
    <string name="onclick_my">切换本侧语言</string>
    <string name="onclick_xuanzhuan">同侧/异侧模式切换</string>
    <string name="longdown_my">长按本侧说话</string>
    <string name="longdown_op">长按对侧说话</string>
    <string name="no_data">暂无历史记录</string>
    <string name="confirm">确定</string>
    <string name="timeout">网络连接超时！</string>
    <string name="select_all">全选</string>
    <string name="select_null">全不选</string>
    <string name="delete">删除</string>
    <string name="cancle">取消</string>
    <string name="delete_record">是否确定永久删除？</string>
    <string name="error_response">服务器开小差了，请重试！</string>
    <string name="timeout_read">网络超时，请重试！</string>
    <string name="timeout_connect">连接超时！</string>
    <string name="error_connect">服务器连接失败，请重试！</string>
    <!--粤语不支持-->
    <string name="not_support">不支持该语种的翻译</string>

    <!---->
    <string name="m_menu">菜单</string>
    <string name="m_translate">语音翻译</string>
    <string name="m_translate_ai">智能翻译</string>
    <string name="m_history">历史记录</string>

</resources>
