<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fanyi_go1"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_I_kown1"
            android:layout_width="214px"
            android:layout_height="56px"
            android:layout_marginLeft="164px"
            android:layout_marginTop="470px"
            android:gravity="center"
            android:text="@string/idown"
            android:textColor="#fff"
            android:textSize="26px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="158px"
            android:layout_marginTop="586px"
            android:text="@string/onclick_my"
            android:textColor="#fff"
            android:textSize="30px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fanyi_go2"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_I_kown2"
            android:layout_width="214px"
            android:layout_height="56px"
            android:layout_marginLeft="164px"
            android:layout_marginTop="292px"
            android:gravity="center"
            android:text="@string/idown"
            android:textColor="#fff"
            android:textSize="26px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78px"
            android:layout_marginTop="198px"
            android:text="@string/onclick_op"
            android:textColor="#fff"
            android:textSize="30px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fanyi_go3"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_I_kown3"
            android:layout_width="214px"
            android:layout_height="56px"
            android:layout_marginLeft="184px"
            android:layout_marginTop="440px"
            android:gravity="center"
            android:text="@string/idown"
            android:textColor="#fff"
            android:textSize="26px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44px"
            android:layout_marginTop="552px"
            android:text="@string/onclick_xuanzhuan"
            android:textColor="#fff"
            android:textSize="30px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/zhuner_fly4"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_I_kown4"
            android:layout_width="214px"
            android:layout_height="56px"
            android:layout_marginLeft="154px"
            android:layout_marginTop="478px"
            android:gravity="center"
            android:text="@string/idown"
            android:textColor="#fff"
            android:textSize="26px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginTop="610px"
            android:text="@string/longdown_my"
            android:textColor="#fff"
            android:textSize="30px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/zhuner_fly5"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_I_kown5"
            android:layout_width="214px"
            android:layout_height="56px"
            android:layout_marginLeft="122px"
            android:layout_marginTop="478px"
            android:gravity="center"
            android:text="@string/idown"
            android:textColor="#fff"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:layout_marginTop="610px"
            android:text="@string/longdown_op"
            android:textColor="#fff"
            android:textSize="30px" />
    </RelativeLayout>
</RelativeLayout>