<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px20"
        android:layout_marginRight="@dimen/px20"
        android:background="@drawable/popu_background"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_wenzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_content"
            android:textSize="@dimen/px30"
            android:lineSpacingExtra="@dimen/px8"
            android:layout_marginLeft="@dimen/px32"
            android:layout_marginRight="@dimen/px32"
            android:gravity="center"
            android:layout_marginTop="@dimen/px64"
            android:layout_marginBottom="@dimen/px64"
            android:textColor="#333"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:background="#ccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px96">
        <TextView
            android:id="@+id/tv_jixu"
            android:layout_width="0px"
            android:layout_weight="1"
            android:text="@string/cont_use"
            android:textColor="#999999"
            android:textSize="@dimen/px30"
            android:gravity="center"
            android:layout_height="match_parent" />
        <View
            android:layout_width="@dimen/px1"
            android:layout_height="match_parent"
            android:background="#ccc"/>
        <TextView
            android:id="@+id/tv_lianwang"
            android:layout_width="0px"
            android:layout_weight="1"
            android:text="@string/conn_net"
            android:textColor="#fe5000"
            android:textSize="@dimen/px30"

            android:gravity="center"
            android:layout_height="match_parent" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>