<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="262px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/popu_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_wenzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64px"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:layout_marginTop="64px"
            android:gravity="center"
            android:lineSpacingExtra="8px"
            android:text="@string/dialog_content"
            android:textColor="#333"
            android:textSize="30px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px">

            <TextView
                android:id="@+id/tv_jixu"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cont_use"
                android:textColor="#999999"
                android:textSize="30px" />

            <View
                android:layout_width="@dimen/px1"
                android:layout_height="match_parent"
                android:background="#ccc" />

            <TextView
                android:id="@+id/tv_lianwang"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/conn_net"
                android:textColor="#fe5000"
                android:textSize="30px" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>