<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px88"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvQuxiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px20"
            android:layout_weight="1"
            android:text="@string/cancle"
            android:textColor="@color/fe5000"
            android:textSize="@dimen/px28"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/close"
            android:layout_marginRight="40px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/flCenter"
        android:layout_width="0px"
        android:layout_height="0px"
        app:layout_constraintBottom_toTopOf="@id/clBianji"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTop">

        <com.aibabel.translate.view.MyRecyclerView
            android:id="@+id/rv_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/view_header" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clBianji"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flCenter">

        <TextView
            android:id="@+id/tvQuanxuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px20"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/select_all"
            android:textColor="@color/white"
            android:textSize="@dimen/px28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvshanchu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/px28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10px"
        android:drawableTop="@mipmap/empty_record"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/gray"
        android:textSize="28px"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/flCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/flCenter" />

</android.support.constraint.ConstraintLayout>